--- a/chrome/skin/all/versions/overlay49.css
+++ b/chrome/skin/all/versions/overlay49.css
@@ -16,3 +16,7 @@
 
 @namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");
 
+#urlbar .urlbar-origin-label
+{
+	-moz-padding-start: 1px;
+}
